--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
   "author": "Multiverse",
   "dependencies": {
     "express": "4.18.1",
-    "sequelize": "6.20.1",
-    "sqlite3": "5.0.8"
+    "sequelize": "^6.31.0",
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "jest": "28.1.0",
-    "nodemon": "2.0.16",
+    "nodemon": "^2.0.22",
     "supertest": "6.2.3"
   }
 }
